docs/_static/xcode.css
div.xcode {
    font-family: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, Courier, monospace;
    font-size: 12px;
    line-height: 1.4;
    margin: 0 0 1rem 3rem;
    /*overflow-x: auto;*/
    white-space: pre;
}


div.xcode code {
    background: whitesmoke;
    border: 1px solid #e0e0e0;
    color: inherit;
    display: block;
    font-size: inherit;
    overflow: auto;
    padding: 8px 12px;
}

p + div.notranslate div.xcode {
    margin-top: -0.5rem;
}

li > p + div.notranslate div.xcode {
    margin-top: -0.3rem;
}


/*------------------------------------------------------------------------------
 * Generic styles (apply to all languages)
 *-----------------------------------------------------------------------------*/

.xcode .kn,   /* Keyword.Namespace */
.xcode .k {   /* Keyword */
    color: #5fa5dc;
    font-weight: bold;
}

.xcode .kc {  /* Keyword.Constant */
    color: green;
    font-weight: bold;
}


.xcode .s,    /* String */
.xcode .s1,   /* String.Single */
.xcode .s2 {  /* String.Double */
    color: #d48a02;
}

.xcode .se,   /* String.Escape */
.xcode .si {  /* String.Interpol */
    color: #d48a0244;
}

.xcode .sd {  /* String.Doc */
    color: #7dbfbf;
}


.xcode .na {  /* Name.Attribute */
    color: orange;
}

.xcode .nb {  /* Name.Builtin */
    font-weight: bold;
}

.xcode .bp {  /* Name.Builtin.Pseudo */
    font-style: italic;
}

.xcode .ne {  /* Name.Exception */
    color: #e62222;
    font-weight: bold;
}

.xcode .fm,   /* Name.Function.Magic */
.xcode .vm {  /* Name.Variable.Magic */
    color: #e24aac;
}

.xcode .nf,   /* Name.Function */
.xcode .nc {  /* Name.Class */
}

.xcode .nd {  /* Name.Decorator */
    color: #829ee0;
}

.xcode .nt {  /* Name.Tag */
    color: blue;
}

.xcode .nv {  /* Name.Variable */
    color: #c17d00;
}


.xcode .o,    /* Operator */
.xcode .ow {  /* Operator.Word */
    color: #5fa5dc;
}

.xcode .c1,   /* Comment.Single */
.xcode .ch {  /* Comment.Hashbang */
    color: #bbb;
    font-style: italic;
}

.xcode .cpf,  /* Comment.PreprocFile */
.xcode .cp {  /* Comment.Preproc */
    color: #00a500;
}

.xcode .m,    /* Number */
.xcode .mi,   /* Number.Integer */
.xcode .mf,   /* Number.Float */
.xcode .mo,   /* Number.Octal */
.xcode .mh,   /* Number.Hex */
.xcode .mb {  /* Number.Bin */
    color: #2db533;
}

.xcode .gh {  /* Generic.Heading */
    color: #8340d8;
    font-weight: bold;
}

.xcode .gs {  /* Generic.Strong */
    font-weight: bold;
}

.xcode .ge {  /* Generic.Emphasis */
    font-style: italic;
}


/*------------------------------------------------------------------------------
 * python
 *-----------------------------------------------------------------------------*/

.xcode code.python.input {
    counter-increment: cc;
    display: block;
    overflow: visible;  /* FIXME */
    padding: 4px 8px;
    position: relative;
}

.xcode code.python.input::before {
    color: #ccc;
    content: "[" counter(cc) "]:";
    font-family: "Source Code Pro", monospace;
    font-size: 80%;
    left: -30px;
    line-height: 24px;
    position: absolute;
    top: 0;
}

.xcode div.output {
    margin-bottom: 0.5rem;
    padding: 4px 8px;
    white-space: pre;
}



/*------------------------------------------------------------------------------
 * bash
 *-----------------------------------------------------------------------------*/

.xcode code.bash {
    background-color: #444;
    border: none;
    color: #dadada;
}

.xcode code.bash .gp {  /* prompt */
    color: #ffdd77;
    user-select: none;
}

.xcode code.bash .c1 {  /* comments */
    color: #558080;
    font-style: italic;
}

.xcode code.bash .go {  /* output */
    opacity: 0.6;
}

.xcode code.bash .s2,
.xcode code.bash .s1 {  /* strings */
    color: #ffae19;
}

.xcode code.bash .si,
.xcode code.bash .nv {  /* variables */
    color: #6f6;
}


/*------------------------------------------------------------------------------
 * restructuredtext
 *-----------------------------------------------------------------------------*/

.xcode code.restructuredtext .na,
.xcode code.restructuredtext .nc {  /* Name.Class */
    color: orange;
}

/* Regular comments in RST are emitted as "preprocessor" */
.xcode code.restructuredtext .cp {  /* Comment.Preproc */
    color: #bbb;
    font-style: italic;
}

